--- a/denison_strength/denison_strength.ipynb
+++ b/denison_strength/denison_strength.ipynb
@@ -2,19 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "b8d8f7f4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/Users/maxfishbein/Documents/denison_strength/GitHub/denison_strength_injuries/denison_strength'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 6\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m#Creating the directory I want to work in \u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Change the current working directory\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m os\u001b[38;5;241m.\u001b[39mchdir(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/Users/maxfishbein/Documents/denison_strength/GitHub/denison_strength_injuries/denison_strength\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Verify the change\u001b[39;00m\n\u001b[1;32m      8\u001b[0m current_directory \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mgetcwd()\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/maxfishbein/Documents/denison_strength/GitHub/denison_strength_injuries/denison_strength'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New Working Directory: /Users/maxfishbein/Documents/GitHub/denison_strength_injuries/denison_strength\n"
      ]
     }
    ],
@@ -24,7 +20,7 @@
     "\n",
     "#Creating the directory I want to work in \n",
     "# Change the current working directory\n",
-    "os.chdir('/Users/maxfishbein/Documents/denison_strength/GitHub/denison_strength_injuries/denison_strength')\n",
+    "os.chdir('/Users/maxfishbein/Documents/GitHub/denison_strength_injuries/denison_strength')\n",
     "# Verify the change\n",
     "current_directory = os.getcwd()\n",
     "print(\"New Working Directory:\", current_directory)\n"
@@ -32,25 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "2bc09f36",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/maxfishbein\n"
-     ]
-    }
-   ],
-   "source": [
-    "%cd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "5375dc44",
    "metadata": {},
    "outputs": [
@@ -132,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "27307518",
    "metadata": {},
    "outputs": [
@@ -216,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "89265771",
    "metadata": {},
    "outputs": [
@@ -294,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "2f231f76",
    "metadata": {},
    "outputs": [
@@ -341,6 +319,140 @@
     "\n",
     "\n",
     "print(df_feb.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "798ef386",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Date    Code                  Type  System Weight  Jump Height  \\\n",
+      "0  4/26/24  BASEB1  Countermovement Jump        741.371       0.5048   \n",
+      "1  4/23/24  BASEB1  Countermovement Jump        737.324       0.5114   \n",
+      "2  4/23/24  BASEB1  Countermovement Jump        736.960       0.5321   \n",
+      "3  4/19/24  BASEB1  Countermovement Jump        738.274       0.4648   \n",
+      "4  4/19/24  BASEB1  Countermovement Jump        738.847       0.4862   \n",
+      "5  4/16/24  BASEB1  Countermovement Jump        730.371       0.5159   \n",
+      "6  4/11/24  BASEB1  Countermovement Jump        747.418       0.4882   \n",
+      "7  4/11/24  BASEB1  Countermovement Jump        749.774       0.4855   \n",
+      "8   4/8/24  BASEB1  Countermovement Jump        743.640       0.4991   \n",
+      "9   4/4/24  BASEB1  Countermovement Jump        759.091       0.4621   \n",
+      "\n",
+      "   Avg. Relative Propulsive Force  Peak Relative Propulsive Force  \\\n",
+      "0                        243.3486                        284.8776   \n",
+      "1                        240.0391                        297.0200   \n",
+      "2                        253.0553                        304.7655   \n",
+      "3                        237.4899                        279.0292   \n",
+      "4                        246.4701                        287.8810   \n",
+      "5                        255.5076                        298.6154   \n",
+      "6                        234.2015                        279.3617   \n",
+      "7                        242.7374                        290.0874   \n",
+      "8                        241.8177                        279.8397   \n",
+      "9                        232.2554                        271.7724   \n",
+      "\n",
+      "   Time To Takeoff  Braking Net Impulse  Relative Peak Landing Force  \\\n",
+      "0            0.679             108.4200                     815.1115   \n",
+      "1            0.732             117.0568                     928.8996   \n",
+      "2            0.702             114.4444                     722.0202   \n",
+      "3            0.677             108.7213                     691.2068   \n",
+      "4            0.681             103.4394                     702.5812   \n",
+      "5            0.627             107.1332                     642.4132   \n",
+      "6            0.672             113.0792                     693.8554   \n",
+      "7            0.647             109.2267                     620.5870   \n",
+      "8            0.701             113.6180                     504.0073   \n",
+      "9            0.690             109.3323                     617.7125   \n",
+      "\n",
+      "   L|R Peak Landing Force  L|R Avg. Landing Force    mRSI  \\\n",
+      "0                  4.6169                  4.7086  0.7435   \n",
+      "1                  2.5259                 -6.9148  0.6986   \n",
+      "2                 15.2791                 -2.8403  0.7580   \n",
+      "3                  5.4282                 -0.0055  0.6865   \n",
+      "4                  6.8002                 -6.6849  0.7139   \n",
+      "5                 -5.7545                  3.7526  0.8228   \n",
+      "6                 -7.9445                 -4.0216  0.7265   \n",
+      "7                  1.3540                 -5.2944  0.7504   \n",
+      "8                 -6.1900                 -0.8025  0.7119   \n",
+      "9                -11.9642                 -8.4017  0.6697   \n",
+      "\n",
+      "   L|R Avg. Braking Force  \n",
+      "0                 -9.6209  \n",
+      "1                 -7.7152  \n",
+      "2                -14.0239  \n",
+      "3                 -9.4419  \n",
+      "4                -10.9876  \n",
+      "5                 -9.7003  \n",
+      "6                 -5.4137  \n",
+      "7                -12.6981  \n",
+      "8                -13.3015  \n",
+      "9                -12.0572  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now you can use a relative path\n",
+    "csv_baseball = 'baseball_spring_data.csv'\n",
+    "# Load the CSV file into a DataFrame\n",
+    "df_baseball = pd.read_csv(csv_baseball)\n",
+    "\n",
+    "# Display the first few rows of the DataFrame\n",
+    "print(df_baseball.head(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d4e126e",
+   "metadata": {},
+   "source": [
+    "## Putting this into SQL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "632ac121",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7fe18a00",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'csvtosql'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[20], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m disk_engine \u001b[38;5;241m=\u001b[39m create_engine(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msqlite:////Users/maxfishbein/Documents/GitHub/denison_strength_injuries/denison_strength/baseball_spring.db\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcsvtosql\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mcs\u001b[39;00m\n\u001b[1;32m      5\u001b[0m cs\u001b[38;5;241m.\u001b[39mmakeFileIntoSQL(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcoded_injuries_feb_24.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfeb_injuries\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmarch_coded_injuries.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmarch_injuries\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mapril_coded_injuries.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mapril_injuries\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbaseball_spring_data.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbaseball_spring_data_fp\u001b[39m\u001b[38;5;124m'\u001b[39m, disk_engine)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'csvtosql'"
+     ]
+    }
+   ],
+   "source": [
+    "    from sqlalchemy import create_engine\n",
+    "import pandas as pd\n",
+    "    disk_engine = create_engine('sqlite:////Users/maxfishbein/Documents/GitHub/denison_strength_injuries/denison_strength/baseball_spring.db')\n",
+    "import csvtosql as cs\n",
+    "cs.makeFileIntoSQL('coded_injuries_feb_24.csv', 'feb_injuries','march_coded_injuries.csv', 'march_injuries', 'april_coded_injuries.csv', 'april_injuries', 'baseball_spring_data.csv', 'baseball_spring_data_fp', disk_engine)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   }
  ],
